<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="4ok-FM-fVJ">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Initial View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="InitialViewController" customModule="RandomMessagingApp" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nickname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TIM-iS-V7e">
                                <rect key="frame" x="16" y="318" width="343" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="textFieldNickname"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvM-4G-JzG">
                                <rect key="frame" x="16" y="376" width="343" height="30"/>
                                <color key="backgroundColor" red="0.21176470816135406" green="0.22352941334247589" blue="0.27058824896812439" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="buttonContinue"/>
                                <state key="normal" title="Continue">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="didContinueButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NoD-G8-0ZK"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="bvM-4G-JzG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="DfM-Rs-cid"/>
                            <constraint firstAttribute="leadingMargin" secondItem="TIM-iS-V7e" secondAttribute="leading" id="DuT-ga-K0l"/>
                            <constraint firstAttribute="trailingMargin" secondItem="TIM-iS-V7e" secondAttribute="trailing" id="MVp-bU-Yaa"/>
                            <constraint firstItem="TIM-iS-V7e" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ui3-XH-XDn"/>
                            <constraint firstItem="bvM-4G-JzG" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="mGx-MK-ocd"/>
                            <constraint firstItem="bvM-4G-JzG" firstAttribute="top" secondItem="TIM-iS-V7e" secondAttribute="bottom" constant="28" id="roI-af-nFi"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="tnc-fr-zaZ"/>
                    <connections>
                        <outlet property="buttonContinue" destination="bvM-4G-JzG" id="Qgg-d3-Arv"/>
                        <outlet property="textFieldNickName" destination="TIM-iS-V7e" id="MAo-pu-FAD"/>
                        <segue destination="MSf-kG-wyO" kind="show" id="Hph-M7-E9A"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="712.79999999999995" y="-322.48875562218893"/>
        </scene>
        <!--Messages View Controller-->
        <scene sceneID="w6Q-s5-eBx">
            <objects>
                <viewController storyboardIdentifier="MessagesViewController" automaticallyAdjustsScrollViewInsets="NO" id="MSf-kG-wyO" customClass="MessagesViewController" customModule="RandomMessagingApp" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="SUm-5A-sJa"/>
                        <viewControllerLayoutGuide type="bottom" id="FhQ-ze-Tf7"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Mhf-1v-0qF">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cit-XT-zrm">
                                <rect key="frame" x="0.0" y="64" width="375" height="550.5"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </tableView>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ecp-0e-ecs">
                                <rect key="frame" x="0.0" y="614.5" width="375" height="52.5"/>
                                <subviews>
                                    <button opaque="NO" clipsSubviews="YES" alpha="0.5" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ju-EO-LS7">
                                        <rect key="frame" x="311.5" y="12" width="55.5" height="30"/>
                                        <color key="backgroundColor" red="0.17254902422428131" green="0.68627452850341797" blue="0.29411765933036804" alpha="1" colorSpace="calibratedRGB"/>
                                        <accessibility key="accessibilityConfiguration" label="buttonSend"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="55.5" id="Rtl-Bs-A6h"/>
                                        </constraints>
                                        <state key="normal" title="Send">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="didSendButtonTapped:" destination="MSf-kG-wyO" eventType="touchUpInside" id="En0-Pw-Zpf"/>
                                        </connections>
                                    </button>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gWl-Kj-e0o">
                                        <rect key="frame" x="12" y="12.5" width="281.5" height="33"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" label="textViewInput"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </textView>
                                </subviews>
                                <color key="backgroundColor" red="0.27406257390975952" green="0.29036706686019897" blue="0.34299924969673157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstItem="4ju-EO-LS7" firstAttribute="leading" secondItem="gWl-Kj-e0o" secondAttribute="trailing" constant="18" id="77L-7B-i8w"/>
                                    <constraint firstAttribute="bottom" secondItem="4ju-EO-LS7" secondAttribute="bottom" constant="10.5" id="AYd-KE-ZhA"/>
                                    <constraint firstAttribute="bottom" secondItem="gWl-Kj-e0o" secondAttribute="bottom" constant="7.5" id="KpB-8a-fhC"/>
                                    <constraint firstAttribute="trailing" secondItem="4ju-EO-LS7" secondAttribute="trailing" constant="8" id="jcD-yr-YV4"/>
                                    <constraint firstItem="gWl-Kj-e0o" firstAttribute="top" secondItem="ecp-0e-ecs" secondAttribute="top" constant="12" id="nbL-gE-djC"/>
                                    <constraint firstItem="gWl-Kj-e0o" firstAttribute="leading" secondItem="ecp-0e-ecs" secondAttribute="leading" constant="12" id="vbs-w5-Yrc"/>
                                </constraints>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="ecp-0e-ecs" firstAttribute="leading" secondItem="Mhf-1v-0qF" secondAttribute="leading" id="2C3-mC-Bho"/>
                            <constraint firstItem="cit-XT-zrm" firstAttribute="leading" secondItem="Mhf-1v-0qF" secondAttribute="leading" id="5js-wc-pjo"/>
                            <constraint firstAttribute="trailing" secondItem="ecp-0e-ecs" secondAttribute="trailing" id="EKR-Pm-lE2"/>
                            <constraint firstAttribute="trailing" secondItem="cit-XT-zrm" secondAttribute="trailing" id="NpQ-zj-56f"/>
                            <constraint firstItem="ecp-0e-ecs" firstAttribute="top" secondItem="cit-XT-zrm" secondAttribute="bottom" id="X0O-0H-yRJ"/>
                            <constraint firstItem="cit-XT-zrm" firstAttribute="top" secondItem="SUm-5A-sJa" secondAttribute="bottom" id="grL-eh-Mdc"/>
                            <constraint firstItem="FhQ-ze-Tf7" firstAttribute="top" secondItem="ecp-0e-ecs" secondAttribute="bottom" id="nVZ-D7-Gxm"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="buttonSend" destination="4ju-EO-LS7" id="6Ns-z4-VR3"/>
                        <outlet property="constKeypadBottom" destination="nVZ-D7-Gxm" id="4Se-jb-moN"/>
                        <outlet property="tableView" destination="cit-XT-zrm" id="YRL-jt-A2B"/>
                        <outlet property="textViewMessageInput" destination="gWl-Kj-e0o" id="bV8-nb-lGw"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fVy-up-gNd" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1573.5999999999999" y="-322.48875562218893"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="PR7-IA-aVb">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4ok-FM-fVJ" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aHf-hC-SAX">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="CDt-Up-zdU"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Z3l-cq-1Mj" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-23" y="-322"/>
        </scene>
    </scenes>
</document>
