...

import UIKit

class InitialViewController: BaseViewController {
    
    @IBOutlet weak var textFieldNickName:UITextField?
    @IBOutlet weak var buttonContinue:UIButton?
	
	let viewModel = InitialViewModel.self
	
    override func viewDidLoad() {
        super.viewDidLoad()
		
...
		//Controls input text
		if viewModel.shared.canPassToMessageView(inputText: (self.textFieldNickName?.text)!) {
			viewModel.shared.user = UserModel(avatarUrl: "person", id: Int(-1), nickname: (self.textFieldNickName?.text)!)
			viewModel.shared.pushToMessagesController(withNavigationController: self.navigationController!)
		}
		else {
			super.showAlert(withTitle: "Error", message: "Nickname should be longer than two characters!")
		}
    }
}

