//
//  MessagesViewUITests.swift
//  RandomMessagingApp
//
//  Created by Yusuf Miletli on 28/07/2017.
//  Copyright © 2017 Miletli. All rights reserved.
//

import XCTest

class MessagesViewUITests: XCTestCase {
	
	let app = XCUIApplication()
	
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        app.launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
	
	func testUIElementsExisting() {
		XCTAssert(app.textViews["textViewInput"].exists)
		XCTAssert(app.buttons["buttonSend"].exists)
	}
	
	func testSendMessage() {
		
		let textView = app.textViews["textViewInput"]
		textView.tap()
		textView.typeText("Hello Dear!")
		
		let buttonSend = app.buttons["buttonSend"]
		buttonSend.tap()
		
		let tablesQuery = XCUIApplication().tables
		XCTAssert(tablesQuery.cells.containing(.staticText, identifier:"Yusuf Miletli").children(matching: .textView).element.exists)
		
	}
}
